--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="icon" href="./icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,25 +18,54 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="./icono.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="./icono.png" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
-    <title>AgusWeather</title>
+    <title>AgusWeather - Arenas Agustin</title>
+    <meta name="title" content="AgusWeather - Arenas Agustin" />
+    <meta
+      name="description"
+      content="Con esta app aprendi la utilizacion e implementación de una Api en un proyecto."
+    />
+
+    <!--  Open Graph / Facebook  -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://arenasagustin.github.io/AgusWeather/"
+    />
+    <meta property="og:title" content="AgusWeather - Arenas Agustin" />
+    <meta
+      property="og:description"
+      content="Con esta app aprendi la utilizacion e implementación de una Api en un proyecto."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1636982641/AgusWeather_yoj48m.png"
+    />
+
+    <!--  Twitter  -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://arenasagustin.github.io/AgusWeather/"
+    />
+    <meta property="twitter:title" content="AgusWeather - Arenas Agustin" />
+    <meta
+      property="twitter:description"
+      content="Con esta app aprendi la utilizacion e implementación de una Api en un proyecto."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/df7zuvuxu/image/upload/v1636982641/AgusWeather_yoj48m.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -44,9 +76,9 @@
         <p class="lead">App creada con React por Agustin</p>
       </div>
 
-      <img src="./icono.png" class="icon">
+      <img src="./icono.png" class="icon" />
     </div>
-    
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
